--- a/knock-out.conf
+++ b/knock-out.conf
@@ -1,34 +1,25 @@
-# Archivo de configuracion de knock-outd
-# nitr0us <nitrousenador[en]gmail[punto]com>
-# Mexico - 13/Jul/2006
-#
-# Nota: Los valores deben estar de la forma: 'Token=Valor', sin espacios entre
-# el caracter '='. Ejemplo: 'Puerto =1025' es invalido (espacio antes del '=')
-# La Secuencia tambien debe estar de la forma: 'Secuencia=pto1,pto2,pto' sin
-# espacios entre las ',' (comas).
+# The values must be in the 'Token=Value' form, without spaces.
 
-# Protocolo de transporte a utilizar (tcp o upd)
-Protocolo=tcp
+# Transport protocol, tcp or udp.
+Protocol=tcp
 
-# Secuencia de puertos con la cual se activara el metodo (ver mas abajo).
-Secuencia=333,1,65535
+# Port knocking sequence of three and only three ports to activate the shell.
+Sequence=777,1,1337
 
-# Timeout, es el tiempo de espera en segundos entre el toque entre un puerto
-# y otro. Si el tiempo se acaba entre el toque de uno y otro, el proceso se
-# reinicia, esperando asi que se toque de nuevo el primer puerto en la secuencia.
-# Rango entre 1 y MAX_TIMEOUT (definido en knock-out.h, default: 60 segundos)
+# Maximum timeout between each port knock. If this is reached, the knocking
+# sequence must be started from the beginning.
+# Must be between 1 and MAX_TIMEOUT (defined in knock-out.h, default: 60 secs)
 Timeout=15
 
-# Metodo a utilizar una vez ejecutada la secuencia.
-# Posibles metodos: bind o reverse.
-# bind, pone el puerto especificado por 'Puerto' (ver mas abajo) en escucha
-# localmente, en cualquier interfaz.
-# reverse, conecta con el host fuente desde donde se hicieron las peticiones
-# de los puertos anteriores y conecta al puerto 'Puerto' (ver mas abajo), el
-# cual debe estar a la escucha para recibir la shell.
-Metodo=reverse
+# Method to spawn a shell after the Sequence is triggered successfully
+# Supported methods: bind or reverse.
+#
+# bind puts a shell listening on the port specified in the next parameter in
+# all the available network interfaces.
+#
+# reverse returns a shell to the client's IP address on the port specified in 
+# the next parameter. This port must be listening in the client side.
+Method=bind
 
-# Puerto a utilizar, ya se para bind (escuchar localmente) o reverse (conectar
-# a maquina remota. Si es reverse, dicho puerto debe estar escuchando para
-# recibir la shell.
-Puerto=64876
+# Context-dependant value. Read the previous parameter.
+Port=64876
