Trying to add an screenshot to the README

--- a/knock-out.conf
+++ b/knock-out.conf
@@ -1,4 +1,4 @@
-# The values must be in the 'Token=Value' form, without spaces.
+# The values must be in the 'Token=value' form, without spaces.
 
 # Transport protocol, tcp or udp.
 Protocol=tcp
@@ -19,7 +19,7 @@ Timeout=15
 #
 # reverse returns a shell to the client's IP address on the port specified in 
 # the next parameter. This port must be listening in the client side.
-Method=bind
+Method=reverse
 
 # Context-dependant value. Read the previous parameter.
 Port=64876
